Print: collapse header margin fix type

--- a/designsystem-dev/print.css
+++ b/designsystem-dev/print.css
@@ -172,7 +172,7 @@
     border-top: 2px solid #cdd7dc;
   }
   .collapse-container .collapse-card .collapse-header button {
-    mnargin: 0;
+    margin: 0;
     padding: 0;
   }
   .collapse-container .collapse-card .collapse-header button .h4 {
